--- a/scripts/Accessory_figs_20160218.Rmd
+++ b/scripts/Accessory_figs_20160218.Rmd
@@ -467,6 +467,9 @@ acc_by_species$variable = c("total accessory costs","prepollen_success","failed_
 write.csv(acc_by_species, file="figs2/Accessory_Costs/Table03_acc_cost_embryo_endo_size_slopes.csv",row.names=FALSE)
 ```
 
+#fixed = BOLE, GRBU, PUTU,
+
+#nearly fixed = EPMI, PELA, LEES
 check <- subset(SummarySpp[["mean"]],species=="BOLE")
 check$seed_size
 check$embryo_endo_size
@@ -480,15 +483,19 @@ check$seed_early_costs
 parts <- subset(PartsSummary,species=="COER")
 parts
 
-invest <- subset(InvestmentByPart,species=="COER"&part=="flower_petals")
+invest <- subset(InvestmentByPart,species=="PUTU"&part=="flower_petals")
 invest
 
-invest_ind <- subset(InvestmentByPart,individual=="BOLE_154")
+invest_ind <- subset(InvestmentByPart,individual=="PUTU_152")
 
-ind <- subset(SummaryInd, species=="COER"&seed_count>0)
+ind <- subset(SummaryInd, species=="GRBU"&seed_count>0)
 check3 <- select(ind,individual,prepollen_costs,seed_early_costs,prepollen_costs,pack_disp_costs,pack_disp_early_costs,propagule_per_seed,seed_costs)
 
 View(check3)
+
+plot(seed_costs ~pack_disp_costs,check3)
+points(seed_costs ~ propagule_per_seed,check3,col="red",pch=16)
+text(seed_costs ~pack_disp_costs,check3,label=individual)
 
 #Figure 5 seed count, scaled to plant size, decreases 1:1 with seed size, while bud count decreases less steeply; indication that seed count is what is actually "programmed in"
 ```{r}
